--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix=”og: http://ogp.me/ns#>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,6 +7,36 @@
       name="description"
       content="Portfolio"
     />
+    <meta 
+  property=”og:title”
+  content=”Example Title” 
+/>
+
+<meta 
+  name=”image” 
+  property=”og:image” 
+  content=”%PUBLIC_URL%/V.jpeg” 
+/>
+
+<meta 
+  name=”author” 
+  content=”Example Author” 
+/>
+
+<meta 
+  property=”og:description” 
+  content=”Example Description“
+/>
+
+<meta 
+  property=”og:url” 
+  content='https://example.com'
+  />
+
+
+
+
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
