linkedin lnk image fix

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <meta name="description" content="logo" />
+<meta name="title" property="og:title" content="logo" />
+<meta property="og:type" content="website" />
+<meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51778961250_c7e8f97cf0_n.jpg" />
+<meta name="description" property="og:description" content="_" /><meta name="author" content="_" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
